tests/ui/coherence/skip-reporting-if-references-err.current.stderr
error[E0726]: implicit elided lifetime not allowed here
  --> $DIR/skip-reporting-if-references-err.rs:10:9
   |
LL | impl<T> ToUnit for T {}
   |         ^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL | impl<T> ToUnit<'_> for T {}
   |               ++++

error[E0277]: the trait bound `for<'a> (): ToUnit<'a>` is not satisfied
  --> $DIR/skip-reporting-if-references-err.rs:15:29
   |
LL | impl Overlap for for<'a> fn(<() as ToUnit<'a>>::Unit) {}
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `for<'a> ToUnit<'a>` is not implemented for `()`

error[E0277]: the trait bound `for<'a> (): ToUnit<'a>` is not satisfied
  --> $DIR/skip-reporting-if-references-err.rs:15:18
   |
LL | impl Overlap for for<'a> fn(<() as ToUnit<'a>>::Unit) {}
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `for<'a> ToUnit<'a>` is not implemented for `()`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0726.
For more information about an error, try `rustc --explain E0277`.
